--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@asymmetrik/ngx-leaflet": "^14.0.1",
     "@types/leaflet": "^1.9.0",
+    "@types/mapbox-gl-leaflet": "^0.0.1",
     "leaflet": "^1.9.2",
+    "mapbox-gl": "^2.10.0",
+    "mapbox-gl-leaflet": "^0.0.15",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
