--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/leaflet/dist/leaflet.css"
+              "node_modules/@geoapify/geocoder-autocomplete/styles/round-borders.css",
+              "node_modules/leaflet/dist/leaflet.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/searchBox.js"
+            ]
           },
           "configurations": {
             "production": {
