--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@asymmetrik/ngx-leaflet": "^14.0.1",
+    "@geoapify/angular-geocoder-autocomplete": "^1.4.0",
+    "@geoapify/geocoder-autocomplete": "^1.4.2",
     "@types/leaflet": "^1.9.0",
     "@types/mapbox-gl-leaflet": "^0.0.1",
     "leaflet": "^1.9.2",
