--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@geoapify/geocoder-autocomplete": "^1.4.2",
     "@types/leaflet": "^1.9.0",
     "@types/mapbox-gl-leaflet": "^0.0.1",
+    "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.2",
     "mapbox-gl": "^2.10.0",
     "mapbox-gl-leaflet": "^0.0.15",
