--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@asymmetrik/ngx-leaflet": "^14.0.1",
+    "@asymmetrik/ngx-leaflet-markercluster": "^14.0.1",
     "@geoapify/angular-geocoder-autocomplete": "^1.4.0",
     "@geoapify/geocoder-autocomplete": "^1.4.2",
+    "@types/leaflet.markercluster": "^1.5.1",
     "@types/mapbox-gl-leaflet": "^0.0.1",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.markercluster": "^1.5.3",
     "mapbox-gl": "^2.10.0",
     "mapbox-gl-leaflet": "^0.0.15",
     "rxjs": "~7.5.0",
