--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/leaflet.markercluster": "^1.5.1",
     "@types/mapbox-gl-leaflet": "^0.0.1",
     "leaflet": "^1.9.3",
+    "leaflet-gps": "^1.7.8",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.markercluster": "^1.5.3",
     "mapbox-gl": "^2.10.0",
