--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^7.0.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
@@ -23,11 +24,14 @@
     "@geoapify/geocoder-autocomplete": "^1.4.2",
     "@types/leaflet": "^1.9.0",
     "@types/mapbox-gl-leaflet": "^0.0.1",
+    "@types/uuid": "^8.3.4",
+    "firebase": "^9.14.0",
     "leaflet": "^1.9.2",
     "mapbox-gl": "^2.10.0",
     "mapbox-gl-leaflet": "^0.0.15",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
