--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "form-group": "^3.0.8",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.2",
+    "leaflet-routing-machine": "^3.2.12",
     "mapbox-gl": "^2.10.0",
     "mapbox-gl-leaflet": "^0.0.15",
     "rxjs": "~7.5.0",
@@ -42,6 +43,7 @@
     "@angular/cli": "~14.2.2",
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
+    "@types/leaflet-routing-machine": "^3.2.4",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
