--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,12 @@
             "styles": [
               "src/styles.css",
               "./node_modules/leaflet/dist/leaflet.css",
+              "./node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
+              "./node_modules/leaflet.markercluster/dist/MarkerCluster.css",
               "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"
             ],
             "scripts": [
+              "./node_modules/leaflet/dist/leaflet.js"
             ]
           },
           "configurations": {
@@ -95,9 +98,15 @@
             "styles": [
               "src/styles.css",
               "./node_modules/leaflet/dist/leaflet.css",
+              "./node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css",
+              "./node_modules/leaflet.markercluster/dist/MarkerCluster.css",
               "./node_modules/leaflet-routing-machine/dist/leaflet-routing-machine.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/popper.js/dist/umd/popper.min.js",
+              "./node_modules/leaflet/dist/leaflet.js"
+            ]
           }
         }
       }
