--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@asymmetrik/ngx-leaflet": "^14.0.1",
+    "@asymmetrik/ngx-leaflet-markercluster": "^14.0.1",
     "@geoapify/angular-geocoder-autocomplete": "^1.4.0",
     "@geoapify/geocoder-autocomplete": "^1.4.2",
     "@types/leaflet": "^1.9.0",
+    "@types/leaflet.markercluster": "^1.5.1",
     "@types/mapbox-gl-leaflet": "^0.0.1",
     "@types/uuid": "^8.3.4",
     "firebase": "^9.14.0",
@@ -32,6 +34,7 @@
     "leaflet": "^1.9.2",
     "leaflet-css": "^0.1.0",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.markercluster": "^1.5.3",
     "mapbox-gl": "^2.10.0",
     "mapbox-gl-leaflet": "^0.0.15",
     "rxjs": "~7.5.0",
